Refactor collision, switch to radians